# ajazz-keyboard-software-linux

./: CMakeLists.txt  README.md
analyze/: hidfilter.py
src/: Ajazz.cpp  Ajazz.hpp  constants.hpp  keyboarddefs.hpp  main.cpp  utils.cpp  utils.hpp
src/GUI/: app.cpp  app.hpp
src/GUI/windows/: macroswindow.cpp  modewindow.cpp  tftscreenwindow.cpp  themeeditorwindow.cpp
src/keyboards/: ak820pro.cpp  ak820pro.hpp  keyboarddefs.hpp
src/utils/: config.cpp  config.hpp  rgb.cpp  rgb.hpp  utils.cpp  utils.hpp
